aon/deploy/k8s/overlays/jax-cluster-prod-10--prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  geneweaver-aon-api-ingress
  annotations:
    # NOTE: When deploying a new instance, make sure to use the staging issuer first
    # so that you don't hit the rate limit for the production issuer.
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "geneweaver-prod.jax.org"
      secretName: geneweaver-sqa-jax-org-tls
  rules:
  - host: "geneweaver-prod.jax.org"
    http:
      paths:
      - pathType: Prefix
        path: "/aon/api"
        backend:
          service:
            name: geneweaver-aon-api
            port:
              number: 8000
